test/trivial/shannon/readWriteComplexFail1.good
readWriteComplexFail1.chpl:2: error: halt reached - ***Error: Incorrect format for complex numbers***
