test/trivial/shannon/readWriteComplexFail1.chpl
var complexNumber: complex;
read(complexNumber);
